# soundy

./: README.md  index.html  package-lock.json  plan.md  start.bat  start_desk.bat
.github/workflows/: ci.yml
backend/: .gitignore  env.example  package-lock.json  package.json  tsconfig.json
backend/src/: db.js  db_pg.js  index.js  index_stage_1.ts
database/: albums.sql  auth_stage_1.postgres.sql  catalog_core.postgres.sql  favorites.sql  idk.sh  listening_events.postgres.sql  pgvector_tracks_embedding.sql  playlist_collaboration.postgres.sql  search_tsvector.postgres.sql  users_theme_config.postgres.sql
de/: .gitignore  index.html  package-lock.json  package.json
de/src/: main.tsx
designs/: CONCEPT_PACK.md  IDEAS.md  README.md  gallery.css  index.html
designs/01-sunrise-wave/: index.html  styles.css
designs/02-midnight-glass/: index.html  styles.css
designs/03-poster-noise/: index.html  styles.css
desktop/: README.md  tsconfig.json  vite.config.ts
desktop/src/: widget_app.tsx  widget_player.tsx  widget_styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: deploy-demo-cloud.md  release-checklist.md  rollback.md
frontend/: env.local.example  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/context/: PlayerContext.tsx
frontend/data/: home.ts  library.ts
frontend/hooks/: useAuthActions.ts  useCoverGlow.ts  useOutsideClick.ts  usePlayerControls.ts  useResizableSidebars.ts  (+1 more)
(+104 files in other folders)
