[package]
name = "soundy_widget_desktop"
version = "0.1.0"
description = "Soundy desktop widget"
authors = ["Soundy Team"]
edition = "2021"

[lib]
name = "soundy_widget_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
